public/stylesheets/requestStream.css
.request {
  margin-bottom: 20px;
}

.requestSide {
  text-align: right;
  margin-bottom: 20px;
}

.requestSide .requestDateTime {
  margin-bottom: 10px;
  color: #999999;
}

.requestSide .responseViews {
  display: inline-block;
  border: 1px solid #cccccc;
  border-radius: 3px;
  padding: 1px 5px 1px 5px;
  cursor: default;
}

.requestMain {
  padding-bottom: 20px;
  border-bottom: 2px solid #eeeeee;
}

.requestMain .requestName {
  font-weight: bold;
  font-size: 14px;
  max-width: 90%;
}

.requestMain .requestName .glyphicon {
  font-weight: bold;
  font-size: 13px;
}

.requestMain .requestOrigin {
  margin-bottom: 15px;
  color: #999999;
  max-width: 90%;
}

.requestMain .responseDescription {
  padding-right: 50px;
}

.requestMain .requestDestroy {
  float: right;
  width: 30px;
  margin-bottom: 10px;
  text-align: center;
}

.requestMain .requestDestroy .glyphicon {
  padding: 5px;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
       -o-user-select: none;
          user-select: none;
}

.requestMain .requestDestroy .glyphicon:hover {
  cursor: pointer;
  color: #ffffff;
  background-color: #2e89c7;
  border-radius: 4px;
}

.requestMain .requestUpvotes {
  float: right;
  width: 30px;
  clear: right;
}

.requestMain .requestResponseForm {
  overflow: hidden;
  margin-top: 20px;
  padding: 10px;
  border: 2px solid #eeeeee;
}

.requestMain .requestResponseForm .btn-schola {
  font-weight: bold;
  width: 70px;
}

.requestMain .requestResponseForm .requestResponseFormUrl,
.requestMain .requestResponseForm .requestResponseFormDescription {
  min-width: 100%;
  max-width: 100%;
  display: block;
  margin-bottom: 10px;
}

.requestMain .requestResponseForm .checkbox {
  float: right;
  margin: 0px;
}

.requestMain .requestResponseForm .checkbox input {
  margin: 2px 5px 0px 0px;
}

.requestMain .requestResponseForm .requestResponseFormSubmit {
  float: right;
}

.publisherName,
.requesterName {
  font-weight: bold;
}

#requestStreamLoading {
  text-align: center;
  padding-bottom: 20px;
  display: none;
}

